--- a/styles.css
+++ b/styles.css
@@ -145,27 +145,62 @@ footer {
 }  
 #SobreNosotros {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
+    background-color: #333;
 }
 .contenedor-horizontal {
-    display: flex; /* Establece el contenedor como un contenedor flex */
-    align-items: center; /* Alinea verticalmente los elementos */
+    display: flex;
     justify-content: space-between;
+    max-width: 1000px; /* Puedes ajustar el ancho máximo según tus preferencias */
+    margin: 0 auto; /* Centra el contenido horizontalmente */
 }
 .contenedor-nosotros {
     display: flex;
     flex-direction: column;
     align-items: start;
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
+    max-width: 80%;
+    margin-left: 10%; /* Ajusta el margen izquierdo para centrar el contenido */
+    padding: 20px; 
+    background-color: #f2f2f2; /* Tonos de gris para el fondo */
+    margin-top: 20px;
+}
+.columna {
+    flex-basis: 50%; /* Cada columna ocupará el 50% del espacio disponible */
 }
 
 .texto {
-    text-align: center;
-    margin-bottom: 20px;
+    text-align: left; /* Alinea el texto justificado */
+    padding-right: 20px; /* Añade padding a la derecha para dejar espacio entre los elementos */
+    max-width: 500px; /* Establece un ancho máximo para el texto */
 }
 
-.img-nosotros {
-    max-width: 100%; /* Ajusta el ancho máximo de la imagen */
+.img-nosotros img {
+    max-width: 100%; /* Para asegurar que la imagen no exceda el ancho del contenedor */
+    height: auto; /* Para mantener la proporción de la imagen */
+}
+#services {
+    max-width: 80%;
+    margin: 0 auto;
+}
+
+.grid-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.grid-row {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px; /* Espacio entre filas */
+}
+
+.grid-item {
+    flex-basis: calc(33.33% - 10px); /* Tamaño de cada elemento, restando el espacio entre ellos */
+    background-color: #f2f2f2; /* Color de fondo de cada elemento */
+    padding: 20px;
+}
+
+/* Estilo para los elementos de la segunda fila */
+.grid-row:last-child .grid-item {
+    background-color: #eaeaea; /* Cambia el color de fondo para diferenciar la segunda fila */
 }
